5, 6: learn_bpe improvement

--- a/doc/sections/4-translation.tex
+++ b/doc/sections/4-translation.tex
@@ -4,7 +4,7 @@
 %
 % Translation
 
-\chapter{Translation}\label{sec:translation}
+\chapter{Translation}\label{ch:translation}
 
 	1. NMT? open vocabulary problems?
 	2. https://arxiv.org/abs/2004.08728 section 5
