--- a/doc/sections/5-methodology.tex
+++ b/doc/sections/5-methodology.tex
@@ -6,11 +6,11 @@
 
 \chapter{Methodology}\label{ch:methodology}
 
-This chapter explains the technical content of this thesis in broad strokes, the methodology used and the general idea of the methods employed. For a more in-depth analysis and code snippets and explanations, refer to the Development chapter~\ref{ch:development}. The results, plots and graphs are displayed in the Results chapter~\ref{ch:results}. This thesis, first of all, aims to replicate the results of BPE and BPE dropout.
+This chapter explains the technical content of this thesis in broad strokes, the methodology used and the general idea of each method employed. For a more in-depth analysis and code snippets and explanations, refer to the Development chapter~\ref{ch:development}. The results, plots and graphs are displayed in the Results chapter~\ref{ch:results}. This thesis, first of all, aims to replicate the results of BPE and BPE dropout.
 
 \section{Replication of BPE}
 
-Using Sennrich et al.'s~\cite{sennrich2015neural} \href{code on Github}{https://github.com/rsennrich/subword-nmt/}, the first goal was to replicate the BPE algorithm, and gauge how good the BPE units are by using an alignment algorithm and matching it against a gold standard. For that, these steps were undertaken:
+Using Sennrich et al.'s~\cite{sennrich2015neural} \href{https://github.com/rsennrich/subword-nmt/}{code on Github}, the first goal of the thesis is to replicate the BPE algorithm, and gauge how good the BPE units are by using an alignment algorithm and matching it against a gold standard. For that, these steps are undertaken:
 
 \begin{enumerate}
 	\item Write learn BPE from corpus algorithm
@@ -51,17 +51,17 @@ Sennrich's repository's code has some additional parameters that were not releva
 	\item Write vocabulary to a file.
 \end{enumerate}
 
-This step of the pipeline only has to be done once for each corpus, afterwards the vocabulary can be used in different ways. But this minimal algorithm, since it has to count all the pairs in the whole corpus in each iteration, takes a long time. One of the improvements of this thesis is optimizing the runtime of this algorithm, which will be explained further down. With the given corpus, these are the 10 most frequent merges in the English language are: \_t h, \_th e, o n, r e, t i, e n, e r, i n, i s, n d. And the 10 most frequent merges in German: e n, e r, c h, i e, e i, n d, n g, \_d ie, s t, i ch
+This step of the pipeline only has to be done once for each corpus, afterwards the vocabulary can be used in different ways. But this minimal algorithm, since it has to count all the pairs in the whole corpus in each iteration, takes a long time. One of the improvements of this thesis is optimizing the runtime of this algorithm, which will be explained further down. With the given corpus, these are the 10 most frequent merges in the English language are: \_t h, \_th e, o n, r e, t i, e n, e r, i n, i s, n d. And the 10 most frequent merges in German: e n, e r, c h, i e, e i, n d, n g, \_d ie, s t, i ch.
 
 \subsection{Apply BPE algorithm}
 
-Once the vocabulary has been learnt, it can be applied to a corpus. In this case, we use the same corpus for training and for applying. To generate different output files, different num\_merges are declared. For example, for 500 merges, only the first 500 merges of the vocabulary are considered, and there is barely any recognizable BPE units in the corpus. For bigger merge values, more and more subword units get merged. In this thesis, merges ranging from 500 up to 8000 have been considered. These are the steps for this part:
+The learnt vocabulary can be applied to a corpus. In the case of this thesis, this corpus is the same as the one used to learn the BPE units. Different num\_merges are declared. For example, for 500 merges, only the first 500 merges of the vocabulary are taken, and there are barely any recognizable BPE units in the corpus. For bigger merge values, more and more subword units get merged. In this thesis, merges range from 500 up to 8000. These are the steps for applying BPE merges to a corpus:
 
 \begin{enumerate}
 	\item Load data, corpus and BPE vocabulary.
 	\item Start loop for all numbers of merges: 500 merges, 2000 merges, 8000 merges.
 	\begin{enumerate}
-		\item Start loop from 1 until desired amount of merges.
+		\item Start loop from 1 until desired amount of merges: from 1 to 500 for example.
 		\begin{enumerate}
 			\item Merge the current most frequent pair in corpus.
 		\end{enumerate}
@@ -69,7 +69,8 @@ Once the vocabulary has been learnt, it can be applied to a corpus. In this case
 	\end{enumerate}
 \end{enumerate}
 
-For example, this is what the excerpt from the corpora above look like after 100 merges:
+\clearpage
+This is what the excerpts from the example corpora above look like after 100 merges, that is, after the 100 most common units in the language have been merged:
 
 \begin{quote}
 	English\\
@@ -82,7 +83,7 @@ For example, this is what the excerpt from the corpora above look like after 100
 	\_der \_ur s p r ü ng lich e \_V or sch la g \_der \_Ko mm iss ion \_w ur de \_v o m \_P ar la ment \_in \_er ster \_L es ung \_o h n e \_Ä nder ungen \_vera b sch ie det \_.
 \end{quote}
 
-Only the 100 most common units in the language have been merged, so in English we can see the merge of \emph{\_the}, \emph{\_and}, \emph{ment}, and other very common words and affix/suffixes. As for German, we can see very common words being merged such as \emph{\_die}, \emph{\_das}, \emph{\_bei} and so on. The same sentences after 1000 merges:
+In English, \emph{\_the}, \emph{\_and}, \emph{ment} and other very common words and affix/suffixes have been merged. As for German, we can see very common words being merged such as \emph{\_die}, \emph{\_das}, \emph{\_bei} and so on. The same sentences after 1000 merges:
 
 \begin{quote}
 	English\\
@@ -95,6 +96,7 @@ Only the 100 most common units in the language have been merged, so in English w
 	\_der \_ur sp rüngliche \_Vorschlag \_der \_Kommission \_wurde \_vom \_Parlament \_in \_erster \_L esung \_ohne \_Änderungen \_verab schiedet \_.
 \end{quote}
 
+\clearpage
 We can see bigger subwords being merged, such as \emph{reading}, \emph{first}, \emph{zweite} and so on. And the sentences after 4000 merges:
 
 \begin{quote}
@@ -112,60 +114,56 @@ Most words are merged, except \emph{\_dis abled} in English, and \emph{\_T ransp
 
 \subsection{Extract alignments}\label{subsec:extractalign}
 
-To evaluate if the BPE units are good, bilingual corpora are aligned, and then compared against a gold standard. The motivation behind alignment and how it works can be found in~\ref{ch:translation}. On the first step, alignment, two algorithms have been used, namely fastalign and eflomal. The software installation guides can be found in the development section~\ref{ch:development}. These algorithms take English text and German as input and create an alignment file as output. For the example above:
+To evaluate if the BPE units are good, bilingual corpora are aligned, and then compared against a gold standard. The motivation behind alignment and how it works can be found in~\ref{ch:translation}. The challenge here lies in the fact that if the BPEs are of good quality, the alignment algorithm will align subword items correctly, and therefore in the subword-to-word mapping, the word alignments will have a high score relative to the gold standard.
+
+On the first step, alignment, two algorithms have been used, namely fastalign and eflomal. The software installation guides can be found in the development section~\ref{ch:development}. These algorithms take English text and German as input and create an alignment file as output. For the example above:
 
 \begin{quote}
 	English sentence: The Committee on Transport and Tourism has adopted four amendments for the second reading .\\
 	German sentence: Der Transportausschuß hat für die zweite Lesung vier Änderungsanträge beschlossen .\\
-	Alignment: 0-0 1-1 2-1 3-1 4-1 5-1 6-2 7-9 8-7 9-8 10-3 11-4 12-5 13-6 14-10\\
+	Alignment output: 0-0 1-1 2-1 3-1 4-1 5-1 6-2 7-9 8-7 9-8 10-3 11-4 12-5 13-6 14-10\\
 
 	English sentence: The initial Commission proposal was adopted unamended by Parliament on first reading .\\
 	German sentence: Der ursprüngliche Vorschlag der Kommission wurde vom Parlament in erster Lesung ohne Änderungen verabschiedet .\\
-	Alignment: 0-0 1-1 2-4 3-2 3-3 4-5 5-13 6-11 6-12 7-6 8-7 9-8 10-9 11-10 12-14
+	Alignment output: 0-0 1-1 2-4 3-2 3-3 4-5 5-13 6-11 6-12 7-6 8-7 9-8 10-9 11-10 12-14
 \end{quote}
 
-Many words have one-to-one alignment, such as \emph{four}-\emph{vier} and \emph{adopted}-\emph{verabschiedet}. Some others have many-to-one alignments, such as \emph{Committee on Transport and Tourism}-\emph{Transportausschuß} and one-to-many alignments such as \emph{unamended}-\emph{ohne Änderungen}.
-
-In our case however, the input files aren't composed by words, but rather by subwords. And the alignments are done among subwords. As with the example with 4000 merges:
+\clearpage
+Many words have one-to-one alignment, such as \emph{four}-\emph{vier} and \emph{adopted}-\emph{verabschiedet}. Some others have many-to-one alignments, such as \emph{Committee on Transport and Tourism}-\emph{Transportausschuß} and one-to-many alignments such as \emph{unamended}-\emph{ohne Änderungen}. In our case however, the input files aren't composed by words, but rather by subwords. And the alignments are done among subwords. Using the example above but with subwords instead of words:
 
 \begin{quote}
 	English sentence: \_the \_Committee \_on \_Transport \_and \_Tourism \_has \_adopted \_four \_amendments \_for \_the \_second \_reading \_.\\
 	German sentence: \_der \_T ransp ortausschuß \_hat \_für \_die \_zweite \_Lesung \_vier \_Änderungsanträge \_beschlossen \_.\\
-	Alignment: 0-0 1-1 2-1 3-1 4-1 5-1 1-2 2-2 3-2 4-2 5-2 1-3 2-3 3-3 4-3 5-3 6-4 7-11 8-9 9-10 10-5 11-6 12-7 13-8 14-12
+	Alignment output: 0-0 1-1 2-1 3-1 4-1 5-1 1-2 2-2 3-2 4-2 5-2 1-3 2-3 3-3 4-3 5-3 6-4 7-11 8-9 9-10 10-5 11-6 12-7 13-8 14-12
 \end{quote}
 
-Since the German word \emph{Transportausschuß} is divided into three words, namely \emph{T ransp ortausschuß}, the many-to-one alignment from the previous case is now a many-to-many alignment. Now there are subword alignments as opposed to word alignments. The number of alignment has grown from last example.
-
-Because the gold standard against which the system is being evaluated consists of word alignments, it's necesssary to map subword alignments into word alignments.
-
-This script takes English and German corpora and the alignment file as inputs, and outputs a word alignment file.
+Now there are subword alignments as opposed to word alignments. For instance, since the German word \emph{Transportausschuß} is divided into three words, namely \emph{T ransp ortausschuß}, the many-to-one alignment from the previous case is now a many-to-many alignment. The number of alignment has grown from last example. Because the gold standard against which the system is being evaluated consists of word alignments, it's necesssary to map subword alignments into word alignments, which is the second step in this algorithm. Using English and German corpora and the alignment file as input files, this algorithm gives a word alignment file as output.
 
 \begin{quote}
 	English sentence: \_the \_Committee \_on \_Transport \_and \_Tourism \_has \_adopted \_four \_amendments \_for \_the \_second \_reading \_.\\
 	German sentence: \_der \_T ransp ortausschuß \_hat \_für \_die \_zweite \_Lesung \_vier \_Änderungsanträge \_beschlossen \_.\\
 	Subword alignment: 0-0 1-1 2-1 3-1 4-1 5-1 1-2 2-2 3-2 4-2 5-2 1-3 2-3 3-3 4-3 5-3 6-4 7-11 8-9 9-10 10-5 11-6 12-7 13-8 14-12\\
-	Output word alignment: 0-0 1-1 2-1 3-1 4-1 5-1 6-2 7-9 8-7 9-8 10-3 11-4 12-5 13-6 14-10
+	Word alignment output: 0-0 1-1 2-1 3-1 4-1 5-1 6-2 7-9 8-7 9-8 10-3 11-4 12-5 13-6 14-10
 \end{quote}
-
-The challenge here lies in the fact that if the BPEs are of good quality, the alignment algorithm will align subword items correctly, and therefore in the subword-to-word mapping, the word alignments will be correct.
 
 \subsection{Calculate alignment scores}
 
-In the final step, the alignment scores are computed, against the gold standard. Once loading the gold dataset, each alignment file (for each number of symbols computed in BPE previously) is matched against this dataset, obtaining precision, recall, F1 score and AER metrics. Therefore, for the case of 100 learnt symbols, there will be an associated score. And so on for other numbers of learnt symbols. Additionally, the gold standard's scores are also computed as a baseline. To make it more visual, the scores are plotted and saved into a \emph{.png} image file as well as \emph{.csv} file with the exact numbers.
+In the final step, the alignment scores are computed against the gold standard. After loading the gold dataset, each alignment file is matched against this dataset, obtaining precision, recall, F1 score and AER metrics. In the case of 100 learnt symbols, there will be an associated score and so on for other numbers of learnt symbols. Additionally, the gold standard's scores are also computed as a baseline. To make it more visual, the scores are plotted and saved into a \emph{.png} image file as well as \emph{.csv} file with the exact numbers.
 
+\clearpage
 \section{Replication of BPE dropout}\label{sec:replbpedrop}
 
-BPE dropout's difference with regards to normal BPE is the fact that some merges don't take place. Based on this randomness, each time this system is carried out, new BPE merges are created. For example, if the most merge in English \emph{(\_t, h)} wasn't merged, the resulting file of BPE merges would be vastly different than if the 10th most frequent merge didn't take place. In order to maintain some balance, the dropout algorithm is run a number of times, in this case 10 times, and then the alignments aggregated, which will be explained below. The algorithm to create the merge list remains unchanged, the first slight change occurs when applying the BPE algorithm to the corpus.
+BPE dropout's difference with regards to normal BPE is the fact that some merges don't take place. Based on this random factor, each time this system is carried out, new BPE merges are created. For example, if the most merge in English \emph{(\_t, h)} is not merged, the resulting file of BPE merges is vastly different than if the 10th most frequent merge does not take place. In order to obtain different instances, the dropout algorithm is run a number of times, in this case 10 times, the alignments extracted 10 times, and then the alignments aggregated. Regarding each specific step, the algorithm to create the merge list (learn\_bpe) remains unchanged, the first slight change occurs when applying the BPE algorithm to the corpus.
 
-In the apply BPE algorithm, a random variable is created for every merge: if it falls below a threshold, the merge in question is discarded. And this function is repeated a number of times, creating a number of BPE files. When extracting alignments, since now there are 10 BPE files instead of a single one, the whole algorithm is run 10 times, and alignments for all numbers of merges x all dropout repetitions are saved. At this point, there are a number of alignments for each dropout case. Which alignment file to pick, or which ones, is the next step to be resolved. Three methods are selected:
+In the apply BPE algorithm, a random variable is created for every merge: if it falls below a threshold, the dropout threshold, the merge in question is discarded. Apart from this, the whole algorithm is run a number of times, creating a number of BPE files, usually ten throughout this thesis. When extracting alignments, since now there are ten BPE files instead of a single one, the whole algorithm is run ten times, and alignments for all numbers of merges multiplied by all dropout repetitions are saved. At this point, there are ten alignments for each sentence. Which alignments to pick, is the next step to be resolved. Three methods are selected:
 
 \begin{itemize}
 	\item Create the union of all alignments.
 	\item Create the intersection of all alignments.
-	\item Create a threshold parameter, for example 0.5. If an alignment is present in 50\% of the alignment files, it's added to the aggregated file.
+	\item Create a threshold parameter, for example 0.5. If an alignment is present in 50\% of all alignments for that sentence, it's added to the aggregated file.
 \end{itemize}
 
-To illustrate this with a example:
+To illustrate this with a example. Files 1, 2 and 3 are three alignment files for a given sentence pair.
 
 \begin{itemize}
 	\item File 1: 0-0 0-1 1-1 1-2 2-3
@@ -176,57 +174,59 @@ To illustrate this with a example:
 	\item Aggregated file: 0-0 0-1 1-1 1-2
 \end{itemize}
 
-As it's visible in the example, the union case takes all alignments into account. By brute force, possibly most of the correct alignments will be present in the alignment (high recall), but the majority of the alignments in the union file will be incorrect (low precision). By contrast, the intersection file is the opposite. The file is much shorter since only the alignments present in \textbf{all} files are considered, these alignments will mostly be correct. But also many of the correct alignments will be missed. The aggregated file with the threshold aims to alleviate this problem by creating a sort of middle point between union and intersection. Taking a threshold value closer to 0 will mean that almost all alignments will be accepted, and therefore the score will be closer to the score of the union. In the opposite end of the spectrum, a threshold value close to 1 means that only alignments present in most alignment files will be accepted, and this resembles the intersection. Many experiments have been done with threshold values ranging from 0.3 to 0.9.
+As it's visible in the example, the \textbf{union} case takes all alignments into account. By brute force, possibly most of the correct alignments will be present in the alignment, yielding a high recall, but the majority of the alignments in the union file will be incorrect, that is, it will have low precision. By contrast, the \textbf{intersection} case is the opposite. The file is much shorter since only the alignments present in \emph{all} files are considered, which means that these alignments will mostly be correct. But also many of the actually correct alignments will not be present, because they might have been skipped, and therefore aren't present in the intersection. 
+
+The method of creating an \textbf{aggregated file} with the threshold aims to alleviate this problem by creating a sort of middle point between union and intersection. Taking a threshold value closer to 0 will mean that almost all alignments will be accepted, and therefore the score will be closer to the score of the union. In the opposite end of the spectrum, a threshold value close to 1 means that only alignments present in most alignment files will be accepted, and this resembles the intersection. Many experiments have been done with threshold values ranging from 0.3 to 0.9, the performances of which can be found in the Results chapter.
 
 \section{Improvement of learn BPEs algorithm}\label{sec:improvlearnbpe}
 
-One of the drawbacks of the method employed for learning BPE units is that every time a pair of sequences is merged in the corpus, the sequence pairs and their frequencies had to be computed from scratch. This requires iterating over all characters in the corpus, for each iteration.
+One of the drawbacks of the algorithm to learn BPE units is that every time a pair of sequences is merged in the corpus, all sequence pairs and their frequencies has to be computed from scratch. This requires iterating over all characters from each sentence in the corpus, and for each iteration, that is, each time a pair of sequences gets merged.
 
 \subsection{Updating only neighboring sequences}
 
-Let's explore the step of merging a pair in the corpus with the following small corpus:
+In order to understand the magnitude of this computation, let us explore the step of merging a pair in the corpus. We can use this small corpus as an example:
 
 \begin{quote}
-	0	The ant and the end .\\
-	1 	The index of the document .\\
+	0	A start and the end .\\
+	1 	The index of a document .\\
 	2 	My name is Bob .
 \end{quote}
 
-In the foremost step, all characters are separated into individual tokens
+In the foremost step, all characters are separated into individual tokens, and the beginning of the work is marked:
 
 \begin{quote}
-	0	\_T h e \_a n t \_a n d \_t h e \_e n d .\\
-	1 	\_T h e \_i n d e x \_o f \_t h e \_d o c u m e n t .\\
+	0	\_A \_s t a r t \_a n d \_t h e \_e n d .\\
+	1 	\_T h e \_i n d e x \_o f \_a \_d o c u m e n t .\\
 	2 	\_M y \_n a m e \_i s \_B o b .
 \end{quote}
 
-When merging ('n', 'd'), the corpus is altered:
+For the sake of the example, let us assume that ('n', 'd') is the most frequent pair of tokens. When merging them, the corpus is altered in the following way:
 
 \begin{quote}
-	0	\_T h e \_a n t \_a nd \_t h e \_e nd .\\
-	1 	\_T h e \_i nd e x \_o f \_t h e \_d o c u m e n t .\\
+	0	\_A \_s t a r t \_a nd \_t h e \_e nd .\\
+	1 	\_T h e \_i nd e x \_o f \_a \_d o c u m e n t .\\
 	2 	\_M y \_n a m e \_i s \_B o b .
 \end{quote}
 
-In the brute force approach, each pair's frequencies are computed again: the frequency of ('\_T', 'h'), ('h', 'e'), etc are all revisited and their frequencies accumulated. But actually the only pairs that need to be updated are the ones surrounding ('n', 'd'). These are the changes that occur in the pairs of tokens:
+In the brute force approach, each pair's frequencies are computed again: the sequence pairs ('\_T', 'h'), ('h', 'e'), etc are all revisited and their frequencies counted from scratch. But this does not have to be the case, actually the only pairs that need to be updated are the ones surrounding ('n', 'd'). When viewing this merge from a different perspective, these are the changes that occur in the pairs of tokens:
 
 \begin{itemize}
-	\item ('a', 'n') in sentence 0 now becomes ('a', 'nd')
-	\item ('e', 'n') in sentence 0 now becomes ('e', 'nd')
+	\item ('\_a', 'n') in sentence 0 now becomes ('\_a', 'nd')
+	\item ('\_e', 'n') in sentence 0 now becomes ('\_e', 'nd')
 	\item ('i', 'n') in sentence 1 now becomes ('i', 'nd')
 	\item ('d', 'e') in sentence 1 now becomes ('nd', 'e')
 \end{itemize}
 
-Therefore, only the following frequency updates must be made:
+The pair of tokens in the word 'and' which previously was ('\_a', 'n'), now becomes ('\_a', 'nd') since 'n' and 'd' have been merged. In this instance, the pair ('\_a', 'n') doesn't exist anymore, and a new pair has been created: ('\_a', 'nd'). And so on for the rest of the tokens. As a result, only the following frequency updates must be made:
 
 \begin{itemize}
-	\item Reduce frequency of ('a', 'n') by 1, increase frequency of ('a', 'nd') by 1.
-	\item Reduce frequency of ('e', 'n') by 1, increase frequency of ('e', 'nd') by 1.
+	\item Reduce frequency of ('\_a', 'n') by 1, increase frequency of ('\_a', 'nd') by 1.
+	\item Reduce frequency of ('\_e', 'n') by 1, increase frequency of ('\_e', 'nd') by 1.
 	\item Reduce frequency of ('i', 'n') by 1, increase frequency of ('i', 'nd') by 1.
 	\item Reduce frequency of ('d', 'e') by 1, increase frequency of ('n', 'de') by 1.
 \end{itemize}
 
-All the other pairs remain unchanged. This is the major improvement of this thesis regarding the learn BPE algorithm, \textbf{the fact that only neighboring tokens of the merged pair need to be updated}. Now, instead of updating each pair in each sentence, it's only necessary to locate the merged pair in the sentence, and update the previous and next tokens.
+All the other pairs remain unchanged. This is the major improvement of this thesis regarding the learn BPE algorithm, \textbf{the fact that only neighboring tokens of the merged pair need to be updated}. Now, instead of updating each pair in each sentence, it is only necessary to update the merge pair's surrounding tokens. The way to do this is by locating the merged pair in the sentence, and updating the previous and next tokens.
 
 \subsection{Saving indexes of pairs}
 
@@ -234,10 +234,5 @@ If a pair is very frequent, it is safe to assume that it will be present in the 
 
 This way, when accessing the most frequent pair in the corpus, we can also access to the sentences they're present in, and iterate only those.
 
-\begin{quote}
-	a\\
-\end{quote}
+\section{BPE without word boundaries}
 
-\begin{enumerate}
-	\item 
-\end{enumerate}
