doc: results and small changes

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -47,6 +47,7 @@
 \include{sections/4-translation}
 \include{sections/5-methodology}
 \include{sections/6-development}
+\include{sections/7-results}
 \include{sections/summary}
 
 % the bibliography
