--- a/doc/sections/6-development.tex
+++ b/doc/sections/6-development.tex
@@ -30,7 +30,7 @@ if rootdir.split(os.sep)[-1] == 'src':
 
 datadir = join(rootdir, 'data')
 inputdir = join(datadir, 'input')
-bpedir = join(datadir, normal_bpe')
+bpedir = join(datadir, 'normal_bpe')
 baselinedir = join(rootdir, 'reports', 'scores_normal_bpe')
 scoredir = join(rootdir, 'reports', 'scores_normal_bpe')
 goldpath = join(inputdir, 'eng_deu.gold')
